--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;200;300;400;500;600;800&display=swap);
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Open Sans", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.searchContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 80vh;
+  min-width: 80%;
+  width: 80%;
+  background: #fff;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+input {
+  width: 50%;
+  margin: 20px;
+  padding: 20px;
+  font-size: 1.2rem;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+.searchResult {
+  margin: 20px;
+  padding: 20px;
+  font-size: 1.2rem;
+}
+
+.searchResult span {
+  font-weight: 600;
+  margin-left: 10px;
 }
